# gaze-aware-avatar-study-kit

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml
backend/: .env.example  backend.spec  pyproject.toml  run.py
backend/app/: main.py  settings.py
backend/app/adapters/: tobii.py
backend/app/routes/: gaze.py  logs.py  realtime.py  runtime.py  sessions.py  study.py
backend/app/schemas/: common.py  events.py  realtime.py  study.py
backend/app/services/: assignment_service.py  gaze_store.py  logging_service.py  realtime_service.py  study_context.py  study_loader.py
backend/tests/: test_assignment_service.py  test_gaze.py  test_health.py  test_logging_service.py  test_realtime_policy.py  test_runtime.py  test_study_validation.py
data/: .gitignore
data/sample/: demo-session-counterbalanced.jsonl  demo-session-full.jsonl  demo-session-minimal.jsonl
docs/: ARCHITECTURE.md  CREATE_STUDY.md  DATA_FORMATS.md  PRIVACY.md  THIRD_PARTY_ASSETS.md  TOBII_SETUP.md  TROUBLESHOOTING.md
electron/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
electron/src/: main.ts  processes.ts  window.ts
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.integration.config.ts  tsconfig.json  vite.config.ts
frontend/public/: demo-config.json
frontend/src/: main.ts  styles.css
frontend/tests/: BackendGazeProvider.test.ts  (+4 more)
scripts/: build_demo_config.py  build_release.ps1  dev.ps1  dev.sh  inspect_logs.py  validate_study.py
(+57 files in other folders)
