[project]
name = "gaze-aware-avatar-study-kit-backend"
version = "0.1.0"
description = "Gaze-Aware Avatar Study Kit — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
tobii = [
    "pyzmq>=26,<28",
]
dev = [
    "ruff",
    "pytest",
]
package = [
    "pyinstaller>=6,<7",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
